# Expense-Tracker-Flask

./: .gitignore  README.md  pyproject.toml  reference_project_folder_structures  run.py
app/: __init__.py  forms.py  run.py
app/templates/: base.html
instance/: finance_tracker.db
main_app/: __init__.py  forms.py  utiities.py  views.py
main_app/models/: users.py
main_app/templates/: base.html  home.html
main_app/templates/auth/: login.html  register.html
