[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = "Expense Tracker using Flask for Learning Purpose"
authors = ["Thiha Aung"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
