[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = "Expense Tracker using Flask for Learning Purpose"
authors = ["Thiha Aung"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-bootstrap = "^3.3.7.1"
flask-wtf = "^1.2.1"
flask-login = "^0.6.3"
email-validator = "^2.1.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
